syntax = "proto3";

package org.example.temperaturecontrol;

option java_multiple_files = true;
option java_package = "org.example.temperaturecontrol";
option java_outer_classname = "TemperatureControlServiceProto";

service TemperatureControlService {
  rpc temperatureStream(StreamTemperatureRequest) returns (stream TemperatureData);
}
message StreamTemperatureRequest {}

message TemperatureData{
  double temperature = 1;
}